[NTP] Move dependent features helpers to a separate file.

Due to Chrome Home, we have multiple features, which are enabled
conditionally on Chrome Home. This was achieved by having helpers
checking both features. However, these helpers were not available
outside of the factory.

In this CL:

1) Move these helpers into a separate file |dependent_features.{h,cc}|

2) Use the moved helpers in snippets_internals

3) Disable ForeignSessionsProvider in Chrome Home

4) Add a comment to components/ntp_snippets/features.h to not depend
on these features directly.

Bug: 754260
Change-Id: Idf91f8a934c94048b0de1be459fe6004396e12a8
Reviewed-on: https://chromium-review.googlesource.com/681515
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Commit-Queue: vitaliii <vitaliii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504328}
Former-commit-id: cdf7fe6d3826567eb2e01991174b137ef445b6ed